tests/resource/valid/control_flow/shadow_in_if_arms_else.mamba
class MyClass1
    def f1(self) => pass
class MyClass2
    def f2(self) => pass

def x := MyClass2()
if True then
    x.f2()
else
    def x := MyClass1()
    x.f1()
