tests/resource/invalid/type/class/assign_to_inner_inner_not_allowed.mamba
class Y(x: Int)

class X
    def y: Y
    def __init__(a: Int) =>
        self.y = Y(a)

x = X(10)

# now assign a float
x.x = 2.5
